# 优化 PullRecyclerView增加处理和子view（viewpager）冲突的函数

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
+<!--
+  ~ **********************************************************
+  ~   author   colin
+  ~   company  fosung
+  ~   email    wanglin2046@126.com
+  ~   date     16-11-1 下午2:39
+  ~ *********************************************************
+  -->
+
 <resources>
     <string name="app_name">FrameTemplateDemo</string>
     <string name="load_more_text">正在加载...</string>
