--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
   -->
 
 <resources>
-    <string name="app_name">FrameTemplateDemo</string>
+    <string name="app_name">AllLibDemo</string>
     <string name="load_more_text">正在加载...</string>
 </resources>
